--- a/page.html
+++ b/page.html
@@ -185,7 +185,7 @@
                         <div class="box-icon">
                             <i class="far fa-compass"></i>
                         </div>
-                        <h4 class="box-title">Fifths service
+                        <h4 class="box-title">Fifth service
                         </h4>
                         <p class="box-desc">
                             Tell about the core of the service and upload an atmospherical photo to attract the
