--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/all.min.css">
-    <link rel="stylesheet" href="assets/scss/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
